fixed contact icon size on mobile, fixed work nav anchor on mobile

--- a/_Global/css/main.css
+++ b/_Global/css/main.css
@@ -287,6 +287,11 @@ path {
 }
 
 @media screen and (max-width: 480px){
+
+    .header .mobile-menu {height:60px;}
+
+    .nav {padding-top:20px;}
+
     .outer-wrapper {padding: 0;background-color: rgb(0,0,0);}
     .inner-wrapper{ background: url('/_Global/images/bg/bg-mobile.jpg') 50% 0 no-repeat fixed; background-size:contain;overflow:hidden;-webkit-overflow-scrolling:touch;}
     .story h1 {font-size:50px;letter-spacing:-1px;}
@@ -315,9 +320,9 @@ path {
     #dodge{ background:url('/_Global/images/bg/dart-mobile.jpg') no-repeat; background-size:cover;height:335px;}
     #ride-planner{ background: url('/_Global/images/bg/ride-planner-mobile.jpg') no-repeat; background-size:cover;height:335px;margin-top:-5px;}
 
-    .contact-wrapper > div {width:40%;}
+    .contact-wrapper > div {width:40%;display:inline-flex;}
 
-    .cube {height:80px;padding-right:0;}
+    .cube {height:80px;padding-right:0;width:100%;}
 
     .footer {display: none;}
 }
